--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <label class="switch-label">
         <input type="checkbox" id="use-proxy" />
         <span class="slider"></span>
-        <span data-i18n="useProxy">使用私人提供的 GitHub 加速代理</span>
+        <span data-i18n="useProxy">使用私人提供的加速代理</span>
       </label>
     </div>
     <div class="status" id="status"></div>
