--- a/index.html
+++ b/index.html
@@ -42,26 +42,60 @@
         <span class="close">&times;</span>
       </div>
       <div class="modal-body">
-        <div class="config-row">
-          <label for="api-host" data-i18n="apiHostLabel">API 主机地址:</label>
-          <input id="api-host" type="text" data-i18n="apiHostPlaceholder" placeholder="例如: xxx.xxx.xx" />
+        <div class="config-section">
+          <div class="section-header">
+            <h4 data-i18n="apiListTitle">API 配置列表</h4>
+            <button id="add-api" class="add-btn" data-i18n="addApi" title="添加 API">
+              <i class="fas fa-plus"></i>
+            </button>
+          </div>
+          <div id="api-list" class="api-list">
+            <!-- API 配置项将动态添加到这里 -->
+          </div>
         </div>
-        <div class="config-row">
-          <label for="repo-owner" data-i18n="repoOwnerLabel">仓库所有者:</label>
-          <input id="repo-owner" type="text" data-i18n="repoOwnerPlaceholder" placeholder="例如: xxx" />
+        
+        <div class="config-section">
+          <div class="config-row">
+            <label class="switch-label">
+              <input type="checkbox" id="use-proxy" />
+              <span class="slider"></span>
+              <span data-i18n="useProxy">使用私人提供的加速代理</span>
+            </label>
+          </div>
         </div>
-        <div class="config-row">
-          <label for="repo-name" data-i18n="repoNameLabel">仓库名称:</label>
-          <input id="repo-name" type="text" data-i18n="repoNamePlaceholder" placeholder="例如: xxx" />
+
+        <!-- 添加/编辑 API 表单 -->
+        <div id="api-form" class="api-form" style="display: none;">
+          <h4 id="api-form-title" data-i18n="addApiTitle">添加 API 配置</h4>
+          <div class="config-row">
+            <label for="api-type" data-i18n="apiTypeLabel">API 类型:</label>
+            <select id="api-type">
+              <option value="gitea">Gitea</option>
+              <option value="github">GitHub</option>
+              <option value="gitlab">GitLab</option>
+            </select>
+          </div>
+          <div class="config-row">
+            <label for="api-name" data-i18n="apiNameLabel">配置名称:</label>
+            <input id="api-name" type="text" data-i18n="apiNamePlaceholder" placeholder="例如: 主服务器" />
+          </div>
+          <div class="config-row">
+            <label for="api-host" data-i18n="apiHostLabel">API 主机地址:</label>
+            <input id="api-host" type="text" data-i18n="apiHostPlaceholder" placeholder="例如: xxx.xxx.xx" />
+          </div>
+          <div class="config-row">
+            <label for="repo-owner" data-i18n="repoOwnerLabel">仓库所有者:</label>
+            <input id="repo-owner" type="text" data-i18n="repoOwnerPlaceholder" placeholder="例如: xxx" />
+          </div>
+          <div class="config-row">
+            <label for="repo-name" data-i18n="repoNameLabel">仓库名称:</label>
+            <input id="repo-name" type="text" data-i18n="repoNamePlaceholder" placeholder="例如: xxx" />
+          </div>
+          <div class="form-actions">
+            <button id="save-api" data-i18n="saveApi">保存 API</button>
+            <button id="cancel-api" data-i18n="cancelApi">取消</button>
+          </div>
         </div>
-        <div class="config-row">
-          <label class="switch-label">
-            <input type="checkbox" id="use-proxy" />
-            <span class="slider"></span>
-            <span data-i18n="useProxy">使用私人提供的加速代理</span>
-          </label>
-        </div>
-        <button id="save-config" data-i18n="saveConfig">保存配置</button>
       </div>
     </div>
   </div>
