fix: when width too small, github icon went up to tangent of the top

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body class="font-sans bg-gray-50 text-gray-800 min-h-screen flex flex-col leading-relaxed">
-  <header class="bg-red-500 text-white p-5 text-center rounded-b-3xl shadow-md relative">
+  <header class="bg-red-500 text-white p-5 sm:p-5 p-4 text-center rounded-b-3xl shadow-md relative">
     <a href="https://github.com/KirisameVanilla/TJA-Tatsujin-Web" target="_blank" data-i18n="githubTitle" title="查看项目源码"
-      class="text-white absolute right-5 top-1/2 transform -translate-y-1/2 text-2xl hover:scale-110 transition-transform duration-100">
+      class="text-white absolute right-3 sm:right-5 top-1/2 transform -translate-y-1/2 text-xl sm:text-2xl hover:scale-110 transition-transform duration-100">
       <i class="fab fa-github"></i>
     </a>
-    <h1 data-i18n="headerTitle" class="m-0 text-3xl">TJA-Tatsujin</h1>
+    <h1 data-i18n="headerTitle" class="m-0 text-2xl sm:text-3xl">TJA-Tatsujin</h1>
   </header>
 
   <main class="flex-1 p-6 max-w-3xl w-full mx-auto my-4 box-border">
