chore: sort out css and tailwind class

--- a/index.html
+++ b/index.html
@@ -9,142 +9,143 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 
-<body class="font-sans bg-gray-50 text-gray-800 min-h-screen flex flex-col leading-relaxed">
-  <header class="bg-red-500 text-white p-5 sm:p-5 p-4 text-center rounded-b-3xl shadow-md relative">
-    <a href="https://github.com/KirisameVanilla/TJA-Tatsujin-Web" target="_blank" data-i18n="githubTitle" title="查看项目源码"
-      class="text-white absolute right-3 sm:right-5 top-1/2 transform -translate-y-1/2 text-xl sm:text-2xl hover:scale-110 transition-transform duration-100">
+<body class="flex flex-col bg-gray-50 min-h-screen font-sans text-gray-800 leading-relaxed">
+  <header class="relative bg-red-500 shadow-md p-4 sm:p-5 rounded-b-3xl text-white text-center">
+    <a href="https://github.com/KirisameVanilla/TJA-Tatsujin-Web" target="_blank" rel="noopener" data-i18n="githubTitle"
+      title="查看项目源码"
+      class="top-1/2 right-3 sm:right-5 absolute text-white text-xl sm:text-2xl hover:scale-110 transition-transform -translate-y-1/2 duration-100 transform">
       <i class="fab fa-github"></i>
     </a>
     <h1 data-i18n="headerTitle" class="m-0 text-2xl sm:text-3xl">TJA-Tatsujin</h1>
   </header>
 
-  <main class="flex-1 p-6 max-w-3xl w-full mx-auto my-4 box-border">
+  <main class="box-border flex-1 mx-auto my-4 p-4 sm:p-6 w-full max-w-3xl">
     <input id="search" data-i18n="searchPlaceholder" placeholder="输入搜索关键字" autocomplete="off"
-      class="w-full p-3 text-lg border-2 border-gray-300 rounded-xl outline-none box-border transition-colors duration-100 focus:border-red-500 focus:shadow-lg focus:shadow-red-100" />
+      class="box-border focus:shadow-lg focus:shadow-red-100 p-2.5 sm:p-3 border-2 border-gray-300 focus:border-red-500 rounded-xl outline-none w-full text-base sm:text-lg transition-colors duration-100" />
     <button id="start" data-i18n="startDownload" disabled
-      class="bg-red-500 text-white border-0 px-6 py-3 text-lg rounded-xl cursor-pointer mx-auto mt-4 block transition-all duration-100 hover:bg-red-600 hover:-translate-y-0.5 disabled:bg-gray-400 disabled:cursor-not-allowed disabled:transform-none">开始下载</button>
-    <div class="status mt-6 p-4 bg-gray-100 rounded-xl text-sm text-gray-600 whitespace-pre-wrap break-words"
+      class="block bg-red-500 hover:bg-red-600 disabled:bg-gray-400 mx-auto mt-4 px-5 sm:px-6 py-2.5 sm:py-3 border-0 rounded-xl text-white text-base sm:text-lg disabled:transform-none transition-all hover:-translate-y-0.5 duration-100 cursor-pointer disabled:cursor-not-allowed">开始下载</button>
+    <div class="bg-gray-100 mt-6 p-4 rounded-xl text-gray-600 text-sm break-words whitespace-pre-wrap status"
       id="status"></div>
     <ul id="results"
-      class="list-none p-0 mt-4 max-h-80 overflow-y-auto border border-gray-200 rounded-xl bg-white shadow-lg"></ul>
+      class="bg-white shadow-lg mt-4 p-0 border border-gray-200 rounded-xl max-h-80 overflow-y-auto list-none"></ul>
   </main>
 
-  <footer class="text-center p-5 mt-auto text-gray-500 text-sm bg-gray-100 border-t border-gray-300">
-    &copy; 2025 <a href="https://github.com/KirisameVanilla" target="_blank"
-      class="text-red-500 no-underline hover:underline">KirisameVanilla</a><br />
+  <footer class="bg-gray-100 mt-auto p-5 border-gray-300 border-t text-gray-500 text-sm text-center">
+    &copy; 2025 <a href="https://github.com/KirisameVanilla" target="_blank" rel="noopener"
+      class="text-red-500 hover:underline no-underline">KirisameVanilla</a><br />
     <span data-i18n="footerText">非官方项目，仅供学习交流。</span>
   </footer>
 
   <!-- 设置按钮 -->
   <button id="settings-btn"
-    class="fixed bottom-8 right-8 w-15 h-15 bg-red-500 text-white border-0 rounded-full text-2xl cursor-pointer shadow-lg transition-all duration-300 z-50 flex items-center justify-center hover:bg-red-600 hover:scale-110 hover:shadow-xl active:scale-95"
+    class="right-5 md:right-8 bottom-5 md:bottom-8 z-50 fixed flex justify-center items-center bg-red-500 hover:bg-red-600 shadow-lg hover:shadow-xl border-0 rounded-full w-12 md:w-15 h-12 md:h-15 text-white text-lg md:text-2xl hover:scale-110 active:scale-95 transition-all duration-300 cursor-pointer"
     title="设置">
     <i class="fas fa-cog"></i>
   </button>
 
   <!-- 设置弹窗 -->
   <div id="settings-modal"
-    class="modal hidden fixed z-50 left-0 top-0 w-full h-full bg-transparent bg-opacity-100 backdrop-blur-sm items-center justify-center">
+    class="hidden top-0 left-0 z-50 fixed justify-center items-center bg-transparent bg-opacity-100 backdrop-blur-sm w-full h-full modal">
     <div
-      class="modal-content bg-white rounded-xl shadow-2xl w-11/12 max-w-lg max-h-4/5 overflow-y-auto animate-fade-in">
-      <div class="modal-header flex justify-between items-center p-6 border-b border-gray-200">
-        <h3 data-i18n="apiConfigTitle" class="m-0 text-red-500 text-xl font-semibold">设置</h3>
+      class="bg-white shadow-2xl rounded-xl w-[95%] sm:w-11/12 max-w-lg max-h-4/5 overflow-y-auto animate-fade-in modal-content">
+      <div class="flex justify-between items-center p-4 sm:p-6 border-gray-200 border-b modal-header">
+        <h3 data-i18n="apiConfigTitle" class="m-0 font-semibold text-red-500 text-xl">设置</h3>
         <span
-          class="close text-3xl font-bold text-gray-400 cursor-pointer leading-none p-0 bg-transparent border-0 transition-colors duration-300 hover:text-red-500">&times;</span>
+          class="bg-transparent p-0 border-0 font-bold text-gray-400 hover:text-red-500 text-3xl leading-none transition-colors duration-300 cursor-pointer close">&times;</span>
       </div>
-      <div class="modal-body p-6">
+      <div class="p-4 sm:p-6 modal-body">
         <!-- 主题设置部分 -->
-        <div class="config-section mb-8">
-          <div class="section-header mb-4">
+        <div class="mb-8 config-section">
+          <div class="mb-4 section-header">
             <h4 data-i18n="themeSettings" class="m-0 text-gray-800 text-lg">主题设置</h4>
           </div>
-          <div class="theme-setting-item flex justify-between items-center p-4 border border-gray-200 rounded-lg bg-gray-50">
-            <div class="theme-info">
-              <div class="theme-name font-medium mb-1 text-gray-800">
-                <i class="fas fa-palette mr-2"></i>
+          <div class="flex justify-between items-center bg-gray-50 p-4 border border-gray-200 rounded-lg">
+            <div class="flex-1">
+              <div class="flex items-center mb-1 font-medium text-gray-800">
+                <i class="mr-2 fas fa-palette"></i>
                 <span data-i18n="currentTheme">当前主题</span>
               </div>
-              <div class="theme-description text-sm text-gray-600">
+              <div class="text-gray-600 text-sm">
                 <span id="theme-status" data-i18n="lightTheme">浅色模式</span>
               </div>
             </div>
-            <div class="theme-actions flex gap-2">
+            <div class="flex gap-2 min-w-[200px]">
               <button id="theme-toggle"
-                class="bg-red-500 text-white border-0 px-4 py-2 rounded-lg cursor-pointer transition-all duration-200 hover:bg-red-600 hover:scale-105 flex items-center gap-2 flex-1">
+                class="flex flex-1 items-center gap-2 bg-red-500 hover:bg-red-600 px-4 py-2 border-0 rounded-lg text-white text-sm whitespace-nowrap hover:scale-105 transition-all duration-200 cursor-pointer">
                 <i class="fas fa-moon" id="theme-icon"></i>
                 <span data-i18n="toggleTheme">切换主题</span>
               </button>
               <button id="theme-auto"
-                class="bg-gray-500 text-white border-0 px-3 py-2 rounded-lg cursor-pointer transition-all duration-200 hover:bg-gray-600 hover:scale-105 flex items-center gap-2">
+                class="flex items-center gap-2 bg-gray-500 hover:bg-gray-600 px-3 py-2 border-0 rounded-lg text-white text-sm whitespace-nowrap hover:scale-105 transition-all duration-200 cursor-pointer">
                 <i class="fas fa-clock"></i>
                 <span data-i18n="autoTheme">自动</span>
               </button>
             </div>
           </div>
         </div>
-        
-        <div class="config-section mb-8">
-          <div class="section-header flex justify-between items-center mb-4">
+
+        <div class="mb-8 config-section">
+          <div class="flex justify-between items-center mb-4 section-header">
             <h4 data-i18n="apiListTitle" class="m-0 text-gray-800 text-lg">API 配置列表</h4>
             <button id="add-api"
-              class="add-btn bg-red-500 text-white border-0 rounded-full w-8 h-8 flex items-center justify-center cursor-pointer transition-all duration-200 hover:bg-red-600 hover:scale-110"
+              class="flex justify-center items-center bg-red-500 hover:bg-red-600 border-0 rounded-full w-8 h-8 text-white hover:scale-110 transition-all duration-200 cursor-pointer add-btn"
               data-i18n="addApi" title="添加 API">
               <i class="fas fa-plus"></i>
             </button>
           </div>
-          <div id="api-list" class="api-list max-h-80 overflow-y-auto border border-gray-200 rounded-lg bg-gray-50">
+          <div id="api-list" class="bg-gray-50 border border-gray-200 rounded-lg max-h-80 overflow-y-auto api-list">
             <!-- API 配置项将动态添加到这里 -->
           </div>
         </div>
 
         <!-- 添加/编辑 API 表单 -->
-        <div id="api-form" class="api-form border border-gray-200 rounded-lg p-6 bg-gray-50 mt-4 hidden">
+        <div id="api-form" class="hidden bg-gray-50 mt-4 p-6 border border-gray-200 rounded-lg api-form">
           <h4 id="api-form-title" data-i18n="addApiTitle" class="m-0 mb-4 text-gray-800">添加 API 配置</h4>
-          <div class="config-row flex flex-col mb-4">
-            <label for="api-type" data-i18n="apiTypeLabel" class="font-medium mb-2 text-gray-800">API 类型:</label>
+          <div class="flex flex-col mb-4 config-row">
+            <label for="api-type" data-i18n="apiTypeLabel" class="mb-2 font-medium text-gray-800">API 类型:</label>
             <select id="api-type"
-              class="p-3 text-base border-2 border-gray-300 rounded-lg outline-none transition-colors duration-300 focus:border-red-500">
+              class="p-2.5 sm:p-3 border-2 border-gray-300 focus:border-red-500 rounded-lg outline-none text-sm sm:text-base transition-colors duration-300">
               <option value="gitea">Gitea</option>
               <option value="github">GitHub</option>
               <option value="gitlab">GitLab</option>
             </select>
           </div>
-          <div class="config-row flex flex-col mb-4">
-            <label for="api-name" data-i18n="apiNameLabel" class="font-medium mb-2 text-gray-800">配置名称:</label>
+          <div class="flex flex-col mb-4 config-row">
+            <label for="api-name" data-i18n="apiNameLabel" class="mb-2 font-medium text-gray-800">配置名称:</label>
             <input id="api-name" type="text" data-i18n="apiNamePlaceholder" placeholder="例如: 主服务器"
-              class="p-3 text-base border-2 border-gray-300 rounded-lg outline-none transition-colors duration-300 focus:border-red-500" />
+              class="p-2.5 sm:p-3 border-2 border-gray-300 focus:border-red-500 rounded-lg outline-none text-sm sm:text-base transition-colors duration-300" />
           </div>
-          <div class="config-row flex flex-col mb-4">
-            <label for="api-host" data-i18n="apiHostLabel" class="font-medium mb-2 text-gray-800">API 主机地址:</label>
+          <div class="flex flex-col mb-4 config-row">
+            <label for="api-host" data-i18n="apiHostLabel" class="mb-2 font-medium text-gray-800">API 主机地址:</label>
             <input id="api-host" type="text" data-i18n="apiHostPlaceholder" placeholder="例如: xxx.xxx.xx"
-              class="p-3 text-base border-2 border-gray-300 rounded-lg outline-none transition-colors duration-300 focus:border-red-500" />
+              class="p-2.5 sm:p-3 border-2 border-gray-300 focus:border-red-500 rounded-lg outline-none text-sm sm:text-base transition-colors duration-300" />
           </div>
-          <div class="config-row flex flex-col mb-4">
-            <label for="repo-owner" data-i18n="repoOwnerLabel" class="font-medium mb-2 text-gray-800">仓库所有者:</label>
+          <div class="flex flex-col mb-4 config-row">
+            <label for="repo-owner" data-i18n="repoOwnerLabel" class="mb-2 font-medium text-gray-800">仓库所有者:</label>
             <input id="repo-owner" type="text" data-i18n="repoOwnerPlaceholder" placeholder="例如: xxx"
-              class="p-3 text-base border-2 border-gray-300 rounded-lg outline-none transition-colors duration-300 focus:border-red-500" />
+              class="p-2.5 sm:p-3 border-2 border-gray-300 focus:border-red-500 rounded-lg outline-none text-sm sm:text-base transition-colors duration-300" />
           </div>
-          <div class="config-row flex flex-col mb-4">
-            <label for="repo-name" data-i18n="repoNameLabel" class="font-medium mb-2 text-gray-800">仓库名称:</label>
+          <div class="flex flex-col mb-4 config-row">
+            <label for="repo-name" data-i18n="repoNameLabel" class="mb-2 font-medium text-gray-800">仓库名称:</label>
             <input id="repo-name" type="text" data-i18n="repoNamePlaceholder" placeholder="例如: xxx"
-              class="p-3 text-base border-2 border-gray-300 rounded-lg outline-none transition-colors duration-300 focus:border-red-500" />
+              class="p-2.5 sm:p-3 border-2 border-gray-300 focus:border-red-500 rounded-lg outline-none text-sm sm:text-base transition-colors duration-300" />
           </div>
-          <div class="config-row flex flex-col mb-4">
-            <label class="switch-label relative inline-flex items-center text-sm gap-2 cursor-pointer">
+          <div class="flex flex-col mb-4 config-row">
+            <label class="inline-flex relative items-center gap-2 text-sm cursor-pointer switch-label">
               <input type="checkbox" id="api-use-proxy" class="sr-only" />
-              <span class="slider relative w-11 h-6 bg-gray-400 rounded-full transition-all duration-100">
+              <span class="relative bg-gray-400 rounded-full w-11 h-6 transition-all duration-100 slider">
                 <span
-                  class="slider-dot absolute w-4.5 h-4.5 bg-white rounded-full top-0.5 left-0.5 transition-transform duration-100"></span>
+                  class="top-0.5 left-0.5 absolute bg-white rounded-full w-4.5 h-4.5 transition-transform duration-100 slider-dot"></span>
               </span>
               <span data-i18n="apiUseProxy">使用加速代理</span>
             </label>
           </div>
-          <div class="form-actions flex gap-4 mt-6">
+          <div class="flex gap-4 mt-6 form-actions">
             <button id="save-api" data-i18n="saveApi"
-              class="flex-1 p-3 border-0 rounded-md cursor-pointer text-base transition-all duration-200 bg-red-500 text-white hover:bg-red-600">保存
+              class="flex-1 bg-red-500 hover:bg-red-600 p-3 border-0 rounded-md text-white text-base transition-all duration-200 cursor-pointer">保存
               API</button>
             <button id="cancel-api" data-i18n="cancelApi"
-              class="flex-1 p-3 border-0 rounded-md cursor-pointer text-base transition-all duration-200 bg-gray-500 text-white hover:bg-gray-600">取消</button>
+              class="flex-1 bg-gray-500 hover:bg-gray-600 p-3 border-0 rounded-md text-white text-base transition-all duration-200 cursor-pointer">取消</button>
           </div>
         </div>
       </div>
