--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
   <main class="box-border flex-1 mx-auto my-4 p-4 sm:p-6 w-full max-w-3xl">
     <input id="search" data-i18n="searchPlaceholder" placeholder="输入搜索关键字" autocomplete="off"
       class="box-border focus:shadow-lg focus:shadow-red-100 p-2.5 sm:p-3 border-2 border-gray-300 focus:border-red-500 rounded-xl outline-none w-full text-base sm:text-lg transition-colors duration-100" />
-    <button id="start" data-i18n="startDownload" disabled
-      class="block bg-red-500 hover:bg-red-600 disabled:bg-gray-400 mx-auto mt-4 px-5 sm:px-6 py-2.5 sm:py-3 border-0 rounded-xl text-white text-base sm:text-lg disabled:transform-none transition-all hover:-translate-y-0.5 duration-100 cursor-pointer disabled:cursor-not-allowed">开始下载</button>
+    <div class="flex justify-center gap-4 mt-4">
+      <button id="start" data-i18n="startDownload" disabled
+        class="bg-red-500 hover:bg-red-600 disabled:bg-gray-400 px-5 sm:px-6 py-2.5 sm:py-3 border-0 rounded-xl text-white text-base sm:text-lg disabled:transform-none transition-all hover:-translate-y-0.5 duration-100 cursor-pointer disabled:cursor-not-allowed">开始下载</button>
+      <button id="preview" data-i18n="previewBtn" disabled
+        class="bg-blue-500 hover:bg-blue-600 disabled:bg-gray-400 px-5 sm:px-6 py-2.5 sm:py-3 border-0 rounded-xl text-white text-base sm:text-lg transition-all hover:-translate-y-0.5 duration-100 cursor-pointer disabled:cursor-not-allowed">预览</button>
+    </div>
     <div class="bg-gray-100 mt-6 p-4 rounded-xl text-gray-600 text-sm break-words whitespace-pre-wrap status"
       id="status"></div>
     <ul id="results"
